--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "plena-react-starter-app",
+  "name": "confidence-aware-trading-engine",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
@@ -52,13 +52,13 @@
     "@solana/wallet-adapter-react": "^0.15.38",
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.19.36",
-    "@solana/web3.js": "^1.98.2",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.57.4",
     "bs58": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "embla-carousel-react": "8.5.1",
+    "embla-carousel-react": "8.6.0",
     "framer-motion": "^12.7.4",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
@@ -72,7 +72,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tweetnacl": "^1.0.3",
-    "vaul": "^0.9.6"
+    "vaul": "^0.9.6",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
@@ -88,15 +89,12 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.1",
+    "vite": "^5.4.2",
     "vitest": "^2.1.9",
     "tsx": "^4.19.2",
     "dotenv": "^16.4.5"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
-  {
-  "scripts": {
-    "demo": "tsx scripts/demo.ts"
-  }
-}
-} 
 }
