--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,49 @@
-# Optional overrides used by scripts/demo.ts
+# =============================================================================
+# FRONTEND CONFIG (VITE_ prefix required for browser access)
+# =============================================================================
 
-# Solana RPC endpoint (default: https://api.devnet.solana.com)
-# CATE_RPC_ENDPOINT=
+# Backend Signing API URL (REQUIRED for production)
+# This is the secure API that holds the private key (never in browser)
+VITE_API_URL=http://localhost:3001
+VITE_API_KEY=your-secure-api-key-here
 
-# Path to Solana keypair used to pay for on-chain txs (default: ~/.config/solana/id.json)
-# CATE_SOLANA_KEYPAIR=
+# Solana Program ID (REQUIRED)
+# The deployed CATE program address
+VITE_PROGRAM_ID=77kRa7xJb2SQpPC1fdFGj8edzm5MJxhq2j54BxMWtPe6
 
-# Base58-encoded Ed25519 secret key used to sign risk decisions.
-# If omitted, a new key is generated per run.
-# CATE_TRUSTED_SIGNER_SECRET=
+# Solana Network (devnet | mainnet-beta | testnet)
+VITE_SOLANA_NETWORK=devnet
+
+# Solana RPC Endpoint (REQUIRED for frontend)
+# Can be: https://api.devnet.solana.com or https://api.mainnet-beta.solana.com
+VITE_SOLANA_RPC=https://api.devnet.solana.com
+
+# =============================================================================
+# BACKEND/SCRIPTS CONFIG (Node.js only - NOT exposed to browser)
+# =============================================================================
+
+# Solana RPC endpoint for scripts (defaults to VITE_SOLANA_RPC or devnet)
+CATE_RPC_ENDPOINT=https://api.devnet.solana.com
+
+# Path to Solana keypair used to pay for on-chain txs in scripts
+# (default: ~/.config/solana/id.json)
+CATE_SOLANA_KEYPAIR=
+
+# ⚠️  SECURITY WARNING: Only use this for local development!
+# In production, the trusted signer runs in the backend API (AWS KMS/HSM).
+# Base58-encoded Ed25519 secret key used to sign risk decisions in demo scripts.
+# If omitted, a new key is generated per run (demo only).
+CATE_TRUSTED_SIGNER_SECRET=
 
 # Pyth Hermes endpoint (default: https://hermes.pyth.network)
-# CATE_HERMES_ENDPOINT=
+CATE_HERMES_ENDPOINT=
+
+# =============================================================================
+# OPTIONAL FEATURE FLAGS
+# =============================================================================
+
+# Enable debug logging in console
+VITE_ENABLE_DEBUG=false
+
+# Disable signature verification for local testing (DANGEROUS - never in prod)
+# VITE_SKIP_SIGNATURE_CHECK=false
