cleanup: remove stale program IDs, backups, and hardcoded frontend references

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# =============================================================================
+﻿# =============================================================================
 # FRONTEND CONFIG (VITE_ prefix required for browser access)
 # =============================================================================
 
@@ -9,7 +9,7 @@ VITE_API_KEY=your-secure-api-key-here
 
 # Solana Program ID (REQUIRED)
 # The deployed CATE program address
-VITE_PROGRAM_ID=77kRa7xJb2SQpPC1fdFGj8edzm5MJxhq2j54BxMWtPe6
+VITE_PROGRAM_ID=2CVGjnZ2BRebSeDHdo3VZknm5jVjxZmWu9m95M14sTN3
 
 # Solana Network (devnet | mainnet-beta | testnet)
 VITE_SOLANA_NETWORK=devnet
@@ -29,7 +29,7 @@ CATE_RPC_ENDPOINT=https://api.devnet.solana.com
 # (default: ~/.config/solana/id.json)
 CATE_SOLANA_KEYPAIR=
 
-# ⚠️  SECURITY WARNING: Only use this for local development!
+# âš ï¸  SECURITY WARNING: Only use this for local development!
 # In production, the trusted signer runs in the backend API (AWS KMS/HSM).
 # Base58-encoded Ed25519 secret key used to sign risk decisions in demo scripts.
 # If omitted, a new key is generated per run (demo only).
@@ -47,3 +47,4 @@ VITE_ENABLE_DEBUG=false
 
 # Disable signature verification for local testing (DANGEROUS - never in prod)
 # VITE_SKIP_SIGNATURE_CHECK=false
+
